[project]
name = "01backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aisqlite>=1.1.0",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "fastapi[standart]>=0.137.2",
    "imagekitio>=5.7.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standart]>=0.49.0",
]
